@@ -1,5 +1,9 @@
 2022-10-13  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
+2022-10-13  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def: Remove PKL_INSN_INDENT.
 	* libpoke/pvm.jitter (indent): Remove instruction.
 
